--- a/css/styless.css
+++ b/css/styless.css
@@ -347,12 +347,36 @@ button {
 .header-container {
     display: flex;
 }
+/* Base styles for small devices */
 .container {
-    width: 1158px;
+    min-width: 320px;
+    max-width: 428px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    /* width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 15px; */
 }
+/* Tablet screen */
+@media screen and (min-width: 768px) {
+    .container {
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+}
+    /* Desktop screen  */
+    @media only screen and (min-width: 1200px) {
+       .container {
+        width: 1158px;
+        margin: 0 auto;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+    }
 .nav-container {
     display: flex;
     align-items: center;
@@ -369,12 +393,45 @@ button {
 img {
     display: block;
 }
+
+       /* FEATURES STYLES */
+.feature-icon {
+    display: none;
+}
+
 .features-section {
+    padding: 96px 0;
+}
+@media only screen and (min-width: 768px) {
+   .features-section {
+    padding: 96px 0;
+  }
+}
+@media only screen and (min-width: 1200px) {
+   .features-section {
     padding: 120px 0;
+  }
 }
 .features-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 72px;
+
+
+    /* display: flex;
+    gap: 24px; */ 
+}
+@media only screen and (min-width: 768px) {
+   .features-container {
     display: flex;
-    gap: 24px;
+    width: 768px;
+    padding-top: 72px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 96px;
+  }
 }
 .features-item {
     flex-basis: calc((100% - 3 * 24px) / 4);
