--- a/css/styless.css
+++ b/css/styless.css
@@ -176,18 +176,34 @@ ul {
     background-color: #404BBF;
 }
 .features-heading {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+     letter-spacing: 0.72px;
+    text-transform: capitalize;
     color: var(--logo-second-color);
     margin-bottom: 8px;
+    /* font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;  */
+    
 }
 .features-text {
+
     font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    /* font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--primary-color);
+    color: var(--primary-color); */
 }
 .feature-icon {
     display: flex;
@@ -415,7 +431,6 @@ img {
 .features-container {
     display: inline-flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 72px;
 
 
@@ -425,16 +440,22 @@ img {
 @media only screen and (min-width: 768px) {
    .features-container {
     display: flex;
-    width: 768px;
+    flex-wrap: wrap;
     padding-top: 72px;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    gap: 96px;
+    align-content: flex-start;
+    gap: 24px;
   }
 }
 .features-item {
     flex-basis: calc((100% - 3 * 24px) / 4);
+}
+@media only screen and (min-width: 768px) {
+.features-item {
+    flex-basis: calc((100% - 24px) / 3);
+  }
 }
 .doing-section {
     padding-bottom: 120px;
