--- a/css/styless.css
+++ b/css/styless.css
@@ -30,6 +30,8 @@ ul {
     margin: 0;
 }
 .header-logo {
+    padding-top: 24px;
+    padding-bottom: 22px;
     font-family: "Raleway", sans-serif;
     font-weight: 800; 
     font-size: 18px;
@@ -355,6 +357,8 @@ button {
     cursor: pointer;
 }
 .header-section {
+    width: 428px;
+        height: 70px;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -402,9 +406,19 @@ button {
     gap: 40px;
     display: flex;
 }
+@media only screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+  }
+}
 .address-container {
     display: flex;
     gap: 40px;
+}
+@media only screen and (max-width: 767px) {
+  .address-container {
+    display: none;
+  }
 }
 img {
     display: block;
@@ -412,7 +426,7 @@ img {
 
        /* FEATURES STYLES */
 .feature-icon {
-    display: none;
+    visibility: hidden;
 }
 
 .features-section {
@@ -431,7 +445,6 @@ img {
 .features-container {
     display: inline-flex;
     flex-direction: column;
-    gap: 72px;
 
 
     /* display: flex;
@@ -456,6 +469,30 @@ img {
 .features-item {
     flex-basis: calc((100% - 24px) / 3);
   }
+}
+@media only screen and (min-width: 1200px) {
+   .feature-icon {
+    visibility: visible;
+  }
+  .features-container {
+    display: flex;
+    gap: 24px;
+  }
+  .features-heading {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
+  .features-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--primary-color);
+  }
+  .features-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+}
 }
 .doing-section {
     padding-bottom: 120px;
@@ -895,3 +932,72 @@ p {
     .footer-form-icon {
         margin-left: 16px;
     }
+
+         /* MOBILE MENU */
+    .menu-toggle-icon {
+        stroke: #2E2F42;
+    }
+        .menu-toggle {
+            min-height: 40px;
+            min-width: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            margin: 0;
+            padding: 0;
+            background-color: transparent;
+            cursor: pointer;
+            border: none;
+            border-radius: 50%;
+            outline: none;
+        }
+    
+        @media (min-width: 768px) {
+            .menu-toggle {
+                display: none;
+            }
+        }
+    
+        .menu-toggle:hover,
+        .menu-toggle:focus {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+    
+        .menu-mobile-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            padding: 32px;
+            background-color: #3f51b5;
+            z-index: 999;
+    
+            transform: translateX(100%);
+            transition: transform 250ms ease-in-out;
+        }
+    
+        .menu-mobile-container.is-open {
+            transform: translateX(0);
+        }
+    
+        .menu-mobile-container .menu-toggle {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            color: #fff;
+        }
+    
+        .mobile-menu {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
+    
+        .mobile-menu .link {
+            display: block;
+            padding: 10px;
+            color: #fff;
+            text-decoration: none;
+        }
