--- a/css/styless.css
+++ b/css/styless.css
@@ -366,6 +366,7 @@ button {
 }
 .header-container {
     display: flex;
+    justify-content: space-between;
 }
 /* Base styles for small devices */
 .container {
@@ -375,6 +376,8 @@ button {
     margin-right: auto;
     padding-left: 16px;
     padding-right: 16px;
+    outline: 2px solid red;
+    outline-offset: -2px;
     /* width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
@@ -389,7 +392,7 @@ button {
     }
 }
     /* Desktop screen  */
-    @media only screen and (min-width: 1200px) {
+    @media only screen and (min-width: 1158px) {
        .container {
         width: 1158px;
         margin: 0 auto;
@@ -437,7 +440,7 @@ img {
     padding: 96px 0;
   }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
    .features-section {
     padding: 120px 0;
   }
@@ -470,7 +473,7 @@ img {
     flex-basis: calc((100% - 24px) / 3);
   }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
    .feature-icon {
     visibility: visible;
   }
@@ -596,6 +599,7 @@ p {
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  
   .modal-btn:hover,
   .modal-btn:focus {
     background-color: #404bbf;
@@ -938,66 +942,89 @@ p {
         stroke: #2E2F42;
     }
         .menu-toggle {
-            min-height: 40px;
-            min-width: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        min-height: 40px;
+        min-width: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        background-color: transparent;
+        cursor: pointer;
+        border: none;
+        border-radius: 50%;
+        outline: none;
+    }
     
-            margin: 0;
-            padding: 0;
-            background-color: transparent;
-            cursor: pointer;
-            border: none;
-            border-radius: 50%;
-            outline: none;
-        }
-    
-        @media (min-width: 768px) {
+    @media (min-width: 768px) {
             .menu-toggle {
                 display: none;
             }
-        }
+    }
     
-        .menu-toggle:hover,
-        .menu-toggle:focus {
+    .menu-toggle:hover,
+    .menu-toggle:focus {
             background-color: rgba(0, 0, 0, 0.1);
+    }
+    
+    .menu-mobile-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: #FFFFFF;
+        z-index: 999;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
         }
     
-        .menu-mobile-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            padding: 32px;
-            background-color: #3f51b5;
-            z-index: 999;
+    .menu-mobile-container.is-open {
+        transform: translateX(0);
+    }
     
-            transform: translateX(100%);
-            transition: transform 250ms ease-in-out;
-        }
+    .menu-mobile-container .menu-toggle {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        color: #fff;
+    }
     
-        .menu-mobile-container.is-open {
-            transform: translateX(0);
-        }
+    .mobile-menu {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
     
-        .menu-mobile-container .menu-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
-            color: #fff;
-        }
-    
-        .mobile-menu {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-        }
-    
-        .mobile-menu .link {
-            display: block;
-            padding: 10px;
-            color: #fff;
-            text-decoration: none;
-        }
+    .mobile-menu .link {
+        display: block;
+        padding: 10px;
+        color: #2E2F42;
+        text-decoration: none;
+    }
+    .menu-mobile-close-btn {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        background-color: transparent;
+        width: 24px;
+        height: 24px;
+        padding: 0;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.10);
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .mobile-menu-link {
+        
+        color: var(--logo-second-color);
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+    }
