--- a/css/styless.css
+++ b/css/styless.css
@@ -992,8 +992,11 @@ p {
     }
     
     .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        margin-top: 80px;
         padding: 0;
-        margin: 0;
         list-style: none;
     }
     
@@ -1027,4 +1030,27 @@ p {
         line-height: 40px;
         letter-spacing: 0.72px;
         text-transform: capitalize;
+    } 
+    .mobile-menu-tel {
+        color: #4D5AE5;
+        font-family: Roboto;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+    }
+    
+    .mobile-menu-email {
+        color: #434455;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.4px;
+    }
+    .mobile-address-list {
+        gap: 40px;
     }
