--- a/css/styless.css
+++ b/css/styless.css
@@ -433,7 +433,6 @@ img {
 }
 
 .features-section {
-    padding: 96px 0;
 }
 @media only screen and (min-width: 768px) {
    .features-section {
@@ -969,6 +968,9 @@ p {
     
     .menu-mobile-container {
         position: fixed;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         top: 0;
         left: 0;
         width: 100vw;
@@ -1030,7 +1032,17 @@ p {
         line-height: 40px;
         letter-spacing: 0.72px;
         text-transform: capitalize;
-    } 
+    }
+    .mobile-address-list {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 40px;
+        justify-content: center;
+    }
+    .mobile-menu-address {
+        
+    }
     .mobile-menu-tel {
         color: #4D5AE5;
         font-family: Roboto;
@@ -1050,7 +1062,10 @@ p {
         font-weight: 500;
         line-height: 24px;
         letter-spacing: 0.4px;
+        margin-top: 40px;
     }
-    .mobile-address-list {
-        gap: 40px;
+    .mobile-socials-list {
+        display: flex;
+        justify-content: center;
+        gap: 56px;
     }
