--- a/css/styless.css
+++ b/css/styless.css
@@ -117,14 +117,59 @@ ul {
 .hero-section {
     background-color: var(--section-background-color);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70),rgba(46, 47, 66, 0.70)), url(../images/hero/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_mob@1x.jpg);
+    /* background-image: linear-gradient(rgba(46, 47, 66, 0.70),rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_desk@1x.jpg); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     max-width: 1440px;
     margin: 0 auto;
 }
+         /* RETINA */
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_mob@2x.jpg);
+  }
+}
+@media only screen and (min-width: 376px) {
+   .hero-container {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_tab@1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      .hero-section {
+          background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_tab@2x.jpg);
+      }
+  }
+}
+@media only screen and (min-width: 769px) {
+    .hero-container {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_desk@1x.jpg);
+    }
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+            .hero-section {
+                background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_desk@2x.jpg);
+            }
+        }
+}
+
 .hero-header {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    max-width: 375px;
+    justify-content: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+@media only screen and (min-width: 768px) {
+   .hero-header {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -132,6 +177,7 @@ ul {
     color: #ffffff;
     max-width: 496px;
     margin: 0 auto;
+  }
 }
 .bttn-hero {
     background-color: #4D5AE5;
@@ -376,8 +422,6 @@ button {
     margin-right: auto;
     padding-left: 16px;
     padding-right: 16px;
-    outline: 2px solid red;
-    outline-offset: -2px;
     /* width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
@@ -394,7 +438,7 @@ button {
     /* Desktop screen  */
     @media only screen and (min-width: 1158px) {
        .container {
-        width: 1158px;
+        max-width: 1440px;
         margin: 0 auto;
         padding-left: 15px;
         padding-right: 15px;
@@ -479,6 +523,10 @@ img {
   .features-container {
     display: flex;
     gap: 24px;
+    width: 1128px;
+        height: 224px;
+        align-items: center;
+        justify-content: center;
   }
   .features-heading {
     font-weight: 500;
@@ -960,7 +1008,7 @@ p {
                 display: none;
             }
     }
-    
+     
     .menu-toggle:hover,
     .menu-toggle:focus {
             background-color: rgba(0, 0, 0, 0.1);
@@ -979,6 +1027,16 @@ p {
         z-index: 999;
         transform: translateX(100%);
         transition: transform 250ms ease-in-out;
+        }
+        @media only screen and (min-width: 768px) {
+           .menu-mobile-container {
+            display: none;
+          }
+        }
+        @media only screen and (min-width: 1158px) {
+           .menu-mobile-container {
+            display: none;
+          }
         }
     
     .menu-mobile-container.is-open {
@@ -1057,6 +1115,11 @@ p {
         letter-spacing: 0.72px;
         text-transform: capitalize;
     }
+    @media only screen and (max-width: 427px) {
+    .mobile-menu-tel {
+        font-size: 24px;
+      }
+    }
     
     .mobile-menu-email {
         color: #434455;
@@ -1072,4 +1135,15 @@ p {
         display: flex;
         justify-content: center;
         gap: 56px;
+    }
+    @media only screen and (max-width: 419px) {
+    .footer-social-links {
+        width: 40px;
+        height: 40px;
+      }
+    .mobile-socials-list {
+        display: flex;
+        justify-content: center;
+        gap: 28px;
+    }
     }
