--- a/css/styless.css
+++ b/css/styless.css
@@ -331,8 +331,15 @@ ul {
 }
 .footer-options {
     background-color: var(--section-background-color);
-    padding: 100px 0;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    /* padding: 100px 0; */
 
+}
+@media only screen and (max-width: 767px) {
+  .footer-options {
+    text-align: center;
+  }
 }
 .footer-logo {
     font-family: "Raleway", sans-serif;
@@ -349,10 +356,22 @@ ul {
     color: #f4f4fd 
 }
 .footer-text {
+    width: 264px;
+    font-family: var(--font-family-text);
+    font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--footer-color);
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+
+
+
+    /* line-height: 1.5;
     color: var(--footer-color);
     letter-spacing: 0.02em;
-    max-width: 264px;
+    max-width: 264px; */
 }
 .footer-item {
     background-color: var(--second-logo-color);
@@ -362,9 +381,33 @@ ul {
     margin-right: 120px;
     margin-bottom: 0;
 }
-.footer-section {
+@media only screen and (min-width: 1158px) {
+   .footer-items {
+    margin-right: 120px;
+  }
+}
+@media only screen and (max-width: 1157px) {
+  .footer-items {
+    margin-bottom: 72px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-section {
+      display: flex;
+      align-items: baseline; 
+  }
+}
+@media only screen and (min-width: 768px) {
+  .footer-section {
     display: flex;
-    align-items: baseline;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-section {
+    gap: 24px;
+    margin-left: 108px;
+  }
 }
 .text-socials {
     font-weight: 500;
@@ -563,6 +606,11 @@ img {
 .doing-section {
     padding-bottom: 120px;
 }
+@media only screen and (max-width: 1157px) {
+.doing-section {
+    display: none;
+  }
+}
 .doing-container {
     display: flex;
     gap: 24px;
@@ -726,25 +774,56 @@ p {
    /* Customers block */
    .customers-list {
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 16px;
     justify-content: center;
-    gap: 24px;
+   }
+   @media only screen and (min-width: 768px) {
+     .customers-list {
+       column-gap: 24px;
+     }
    }
    .section-customers {
+    padding: 96px 0;
+   }
+   @media only screen and (min-width: 1158px) {
+      .section-customers {
     padding: 120px 0;
+     }
+   }
+   @media only screen and (min-width: 768px) and (max-width: 1157px) {
+      .customers-container {
+       width: 552px;
+     }
    }
 
    .customers-item {
+    width: 190px;
+        height: 88px;
+        flex-basis: calc((100% - 16px) / 2);
    }
-
-   .customers-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media only screen and (min-width: 768px) {
+  .customers-item {
+    flex-basis: calc((100% - 48px)/3);
     width: 168px;
     height: 88px;
-    border: 1px solid #8E8F99;
+  }
+}
+@media only screen and (min-width: 1158px) {
+   .customers-item {
+    flex-basis: calc((100% - 120px) / 6);
+  }
+}
+   .customers-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
     border-radius: 4px;
-    color: #8e8f99;
+    justify-content: center;
+    align-items: center;
+    color: var(--checkbox-color);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
    .customers-link:hover,
@@ -770,6 +849,7 @@ p {
    .socials-list {
     display: flex;
     gap: 16px;
+    justify-content: center;
    }
    .socials-list-item {
     width: 40px;
@@ -791,6 +871,11 @@ p {
    }
    .footer-social-icon {
     fill: #f4f4fd;
+   }
+   @media only screen and (max-width: 1157px) {
+     .footer-socials {
+    margin-bottom: 72px;
+     }
    }
    .overlay {
     position: relative;
@@ -960,9 +1045,21 @@ p {
     .modal-form-container-comment {
         margin-bottom: 16px;
     }
-    .footer-sub-container {
-        margin-left: 80px;
+    @media only screen and (min-width: 768px) {
+      .footer-sub-container {
+          padding: 0;
+      } 
     }
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+   .footer-sub-container {
+    margin-left: 108px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+   .footer-sub-container {
+    margin: 0 0 0 80px;
+  }
+}
     .footer-sub-disc {
         margin-bottom: 16px;
         font-weight: 500;
@@ -971,15 +1068,29 @@ p {
         letter-spacing: 0.02em;
         color: #ffffff;
     }
-    .footer-form {
-        display: flex;
-        gap: 24px;
+@media only screen and (min-width: 768px) {
+    .footer-sub-disc {
+    text-align: left;
+  }
+}
+
+    @media only screen and (min-width: 768px) {
+      .footer-form {
+          display: flex;
+          gap: 24px; 
+      }
     }
+
     .footer-form-field {
         gap: 24px;
     }
+    @media only screen and (max-width: 767px) {
+       .footer-form-field {
+        width: 100%;
+      }
+    }
     .footer-form-input {
-        width: 264px;
+        width: 100%;
         height: 40px;
         border: 1px solid #ffffff;
         background-color: transparent;
@@ -990,6 +1101,18 @@ p {
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
         color: #ffffff;
+        margin-bottom: 16px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      .footer-form-input {
+        width: 264px;
+      }
+    }
+    @media only screen and (max-width: 767px) {
+    .footer-form-bttn {
+        margin: 0 auto;
+      }
     }
      .footer-form-input::placeholder {
         color: #ffffff;
@@ -1010,7 +1133,7 @@ p {
         background-color: #4D5AE5;
         border: none;
         border-radius: 4px; 
-        
+        padding: 8px 24px;
     }
     .footer-form-icon {
         margin-left: 16px;
