--- a/css/styless.css
+++ b/css/styless.css
@@ -713,6 +713,19 @@ p {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
   }
+  @media only screen and (min-width: 428px) {
+    .modal {
+    width: 392px;
+    min-height: 584px;
+    }
+  }
+    @media only screen and (min-width: 768px) {
+      .modal {
+    width: 408px;
+    padding-left: 24px;
+    padding-right: 24px;
+    }
+  }
   .modal-btn {
     position: absolute;
     top: 24px;
