--- a/css/styless.css
+++ b/css/styless.css
@@ -98,10 +98,24 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--address-color);
+    padding-bottom: 12px;
     /* padding-top: 24px;
     padding-bottom: 24px; */
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+   .header-address-list {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+    color: var(--address-color);
+      /* padding-top: 24px;
+        padding-bottom: 24px; */
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .header-address-list:first-child a {
     margin-bottom: 12px;
@@ -129,7 +143,7 @@ ul {
 }
 .hero-section {
     background-color: var(--section-background-color);
-    padding: 188px 0;
+    /* padding: 188px 0; */
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_mob@1x.jpg);
     /* background-image: linear-gradient(rgba(46, 47, 66, 0.70),rgba(46, 47, 66, 0.70)), url(../images/hero/people-office_desk@1x.jpg); */
     background-repeat: no-repeat;
@@ -137,6 +151,8 @@ ul {
     background-size: cover;
     max-width: 1440px;
     margin: 0 auto;
+    padding-top: 112px;
+    padding-bottom: 112px;
 }
          /* RETINA */
 
@@ -254,6 +270,32 @@ ul {
     letter-spacing: 0.02em;  */
     
 }
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+   .features-heading {
+    display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 40px;
+      letter-spacing: 0.72px;
+      text-transform: capitalize;
+      color: var(--logo-second-color);
+      margin-bottom: 8px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .features-heading {
+    display: flex;
+    justify-content: flex-start;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: 0.4px;
+  }
+}
 .features-text {
 
     font-size: 16px;
@@ -267,14 +309,24 @@ ul {
     color: var(--primary-color); */
 }
 .feature-icon {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     height: 112px;
     background-color: #f4f4fd;
     border-radius: 4px;
     margin-bottom: 8px;
-
+}
+@media only screen and (min-width: 1158px) {
+  .feature-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 112px;
+      background-color: #f4f4fd;
+      border-radius: 4px;
+      margin-bottom: 8px;
+  }
 }
 .page-header {
     font-size: 36px;
@@ -327,6 +379,7 @@ ul {
     letter-spacing: 0.02em;
     color: var(--primary-color);
     text-align: center;
+    margin-bottom: 8px;
 
 }
 .footer-options {
@@ -498,7 +551,7 @@ button {
     /* Desktop screen  */
     @media only screen and (min-width: 1158px) {
        .container {
-        max-width: 1440px;
+        max-width: 1158px;
         margin: 0 auto;
         padding-left: 15px;
         padding-right: 15px;
@@ -544,6 +597,8 @@ img {
 }
 
 .features-section {
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 @media only screen and (min-width: 768px) {
    .features-section {
@@ -558,6 +613,7 @@ img {
 .features-container {
     display: inline-flex;
     flex-direction: column;
+    gap: 72px;
 
 
     /* display: flex;
@@ -568,10 +624,9 @@ img {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     align-content: flex-start;
-    gap: 24px;
+    gap: 72px 24px;
   }
 }
 .features-item {
@@ -579,7 +634,7 @@ img {
 }
 @media only screen and (min-width: 768px) {
 .features-item {
-    flex-basis: calc((100% - 24px) / 3);
+    flex-basis: calc((100% - 24px) / 2);
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -598,8 +653,10 @@ img {
   }
   .features-text {
     font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0.32px;
     color: var(--primary-color);
   }
   .features-item {
@@ -636,7 +693,7 @@ img {
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
    .team-container {
     display: flex;
-    gap: 24px;
+    gap: 64px 24px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -717,6 +774,8 @@ p {
     .modal {
     width: 392px;
     min-height: 584px;
+    padding-left: 16px;
+    padding-right: 16px;
     }
   }
     @media only screen and (min-width: 768px) {
@@ -724,6 +783,13 @@ p {
     width: 408px;
     padding-left: 24px;
     padding-right: 24px;
+    }
+  }
+  @media only screen and (max-width: 427px) {
+    .modal {
+      width: 100%;
+      padding-left: 16px;
+      padding-right: 16px;
     }
   }
   .modal-btn {
@@ -1225,14 +1291,13 @@ p {
         display: flex;
         flex-direction: column;
         gap: 40px;
-        margin-top: 80px;
         padding: 0;
         list-style: none;
         margin-bottom: auto;
+        padding-top: 80px;
     }
     
     .mobile-menu .link {
-        display: block;
         padding: 10px;
         color: #2E2F42;
         text-decoration: none;
